[tool.poetry]
name = "w2ner"
version = "1.0.0"
description = "Active Learning extention of W2NER model"
authors = ["Marko Sahan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.18"
numpy = "1.23.3"
gensim = "4.3.2"
pandas = "1.3.4"
scikit-learn = "1.4.0"
prettytable = "2.4.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.1.3"
black = "^22.10.0"
mypy = "^1.4.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
types-requests = "2.31.0"

[tool.black]
max-line-length = 110

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401', # ignore imported but unused
]
max-line-length = 110
exclude = [".*/", "data/"]  # exclude all .something directories
extend-ignore = ["E203"]  # ignore Whitespace before ':' for black compatibility

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = ["^data/"]
namespace_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
#disallow_any_unimported = true
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
enable_error_code = ["ignore-without-code"]

[tool.poe.tasks]
# Linting / checks / tests
mypy = "mypy . "
test = "pytest -v"
black = "black ."
isort = "isort ."
flake8 = "flake8 ."
precommit = ["isort", "black", "mypy", "flake8"]